--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
-    <title>D3 Demo</title>
+    <title>SPARQLverse D3 Demo</title>
+    <link rel="icon" href="img/favico.ico" type="image/x-icon">
     <script src="bower_components/d3/d3.min.js" type="text/javascript"></script>
   </head>
   <body>
-    DOM
-    <script src="d3demo.js"></script>
+    <h1>SPARQLverse D3 demos:</h1>
+    <ul>
+      <li><a href="socialnetwork.html">Social Network</a></li>
+      <li><a href="d3demo.html">Basic D3 demo (no SPARQL)</a></li>
+    </ul>
   </body>
 </html>
