--- a/socialnetwork.html
+++ b/socialnetwork.html
@@ -42,7 +42,7 @@
       <form class="form-inline">
         <label>SPARQL endpoint:</label>
         <div class="input-append">
-          <input id="endpoint" class="span5" value="http://sc-azane.actian.com:8080/runQuery.html" type="text">
+          <input id="endpoint" class="span5" value="http://svx.sparqlcity.com:8080/runQuery.html" type="text">
           <button class="btn" type="button" onclick="exec()">Query</button>
           <button class="btn" type="button" onclick="exec_offline()">Use cache</button>
           <button class="btn" type="button" onclick="toggle()"><i id="button" class="icon-chevron-up"></i></button>
