--- a/socialnetwork.html
+++ b/socialnetwork.html
@@ -6,7 +6,7 @@
     <script src="lib/d3sparql.js"></script>
     <script type="text/javascript">
       function exec() {
-        var endpoint = d3.select("#endpoint").property("value")
+        // var endpoint = d3.select("#endpoint").property("value")
         var sparql = d3.select("#sparql").property("value")
         d3sparql.query(endpoint, sparql, render)
       }
@@ -26,10 +26,6 @@
         }
         d3sparql.forcegraph(json, config)
       }
-
-      function exec_offline() {
-        d3.json("cache/taxonomy/58669.json", render)
-      }
       function toggle() {
         d3sparql.toggle()
       }
@@ -38,14 +34,15 @@
   <body>
     <h1>Social Network</h1>
     <div id="query" style="margin: 10px">
-      <h1>d3forcegraph</h1>
       <form class="form-inline">
         <label>SPARQL endpoint:</label>
         <div class="input-append">
-          <input id="endpoint" class="span5" value="http://svx.sparqlcity.com:8080/runQuery.html" type="text">
-          <button class="btn" type="button" onclick="exec()">Query</button>
-          <button class="btn" type="button" onclick="exec_offline()">Use cache</button>
-          <button class="btn" type="button" onclick="toggle()"><i id="button" class="icon-chevron-up"></i></button>
+          <input id="endpoint" class="" value="http://svx.sparqlcity.com:8080/runQuery.html" type="text">
+          <br>
+          <label for="showquerytoggle">Show Query:</label>
+          <input type="checkbox" id="showquerytoggle" onclick="toggle()"></input>
+          <br>
+          <button class="btn" type="button" onclick="exec()">RUN</button>
         </div>
       </form>
       <textarea id="sparql" class="span9" rows=15>
@@ -60,5 +57,13 @@ LIMIT 100
 
     <h2>Description:</h2>
     <p>Shows connections within a social network. Influenced by the <a href="http://biohackathon.org/d3sparql/d3sparql-forcegraph.html">D3SPARQL Forcegraph demo</a></p>
+    <script>
+      var rawFile = new XMLHttpRequest();
+      //rawFile.open("GET", file, false);
+      // var endpoint = rawFile.open("GET", './endpoint.txt', false);
+      var endpoint = rawFile.open("GET", './endpoint.txt', false);
+      console.log('endpoint: ' + endpoint);
+      document.getElementById("endpoint").value = endpoint;
+    </script>
   </body>
 </html>
